deploy/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wipp-frontend
spec:
  selector:
    matchLabels:
      app: wipp-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: wipp-frontend
    spec:
      containers:
      - image: labshare/wipp-frontend:FRONTEND_VERSION_VALUE
        name: wipp-frontend
        imagePullPolicy: Always
        args: ["wipp-backend", "8080"]
        ports:
        - containerPort: 80
      restartPolicy: Always
      imagePullSecrets:
      - name: labshare-docker
