deploy/kubernetes/services.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: wipp-frontend-ingress
spec:
  rules:
  - host: FRONTEND_HOST_NAME_VALUE
    http:
      paths:
      - backend:
          serviceName: wipp-frontend
          servicePort: 80
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: wipp-frontend
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 80
  selector:
    app: wipp-frontend
